--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,9 @@ jobs:
         
       - name: Find Node Version
         run: node -v
+        
+      - name: Install Expressjs
+        run: npm i express
+        
+      
 
